<resources>
    <string name="app_name">Elections</string>
    <string name="title_voters_search">Additional voter info</string>
    <string name="title_election_data">Results</string>
    <string name="title_voter_verification">Verify voter</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mother_s_name">Mother\'s Name</string>
    <string name="father_s_name">Father\'s Name</string>
    <string name="year_of_birth">Year of birth</string>
    <string name="search">Search</string>
    <string name="electoral_number">Electoral Number</string>
    <string name="title_activity_login">Login</string>
    <string name="is_registered">Is Registered</string>
    <string name="has_voted">Has Voted</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration_date">Registration Date</string>
    <string name="clear_form">Clear Form</string>
    <string name="vote_date">Vote Date</string>
    <string name="vote_location">Vote Location</string>
    <string name="voter_has_voted_message">The voter has already voted</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="population_reg">Population Reg.</string>
    <string name="municipality">Municipality</string>
    <string name="verify_voter">Verify Voter</string>
    <string name="back_to_search">Back to search</string>
    <string name="update_voter_info">Update voter info</string>
    <string name="Yes">YES</string>
    <string name="No">NO</string>
    <string name="is_member">Is member</string>
    <string name="verify_sucess">Voter verification was successful</string>
    <string name="button_send_results">Send Results</string>
    <string name="verify_upload_data_sucess">The election data have been sent successfuly</string>
    <string name="update_voter_info_success">Voter\'s info have been updated</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="error_verify_no_record_found">The record was not found</string>
    <string name="error_multiple_record_found">Multiple records were found</string>
    <string name="error_verify_illegal_args">Illegal Arguments</string>
    <string name="error_verify_illegal_args_personal_info">Personal Info search arguments are illegal</string>
    <string name="error_verify_illegal_args_ekl_no">Elector number is invalid</string>
    <string name="error_results_already_submitted">Election results have already been submitted for this election department</string>
    <string name="general_error">General Error</string>
    <string name="error_results_total_sum_error">The sum of the total votes is not valid</string>
    <string name="error_results_candidate_sum_error">Candidate sum error is not valid</string>
    <string name="OK">OK</string>
    <string name="version">Version:</string>
    <string name="cancel">Cancel</string>
    <string name="upload_results_verification_dialog">Are you sure you want to upload result data? This action is irreversible.</string>
    <string name="results_total_voters">Total Voters</string>
    <string name="results_neutral_votes">Neutral</string>
    <string name="results_invalid_votes">Invalid</string>
    <string name="results_valid_votes">Valid</string>
    <string name="validation_ekl_num_length">Electoral Number must be 13 digits</string>
    <string name="validation_at_least_3_chars">Please input at least 3 characters</string>
    <string name="validation_year_min_length_4">The year must be at least 4 digits</string>
    <string name="validation_year_numbers">Year must be numeric</string>
    <string name="label_logged_user_FullName">User</string>
    <string name="label_electoral_department">Electoral Department</string>
    <string name="label_electoral_round">Electoral Round</string>
    <string name="verification_login_enter_username">Please enter your username</string>
    <string name="verification_login_enter_password">Please enter your password</string>
    <string name="token_not_valid">Token is not valid</string>
    <string name="validation_surname">Input last name in full</string>
    <string name="login_failure_unauthorized">Unauthorized</string>
    <string name="login_failure_invalid_grant">Invalid Grant</string>
    <string name="results_label_total_candidate">Candidate Total</string>
    <string name="label_city">Adr. Street</string>
    <string name="label_street_num">No.</string>
    <string name="label_post_code">Post Code</string>
    <string name="verify_upload_results_photo_sucess">Photo upload was successful</string>
    <string name="button_attach_photo">Attach Photo</string>
    <string name="validation_result_data_wrong_sums">Please check result data input</string>
    <string name="undo_voter_success">The voter process has been reverted</string>
    <string name="menu_label_undo_vote">Undo Vote</string>
    <string name="voter_not_verified">The voter has not been verified yet</string>
    <string name="voter_verified_other_department">The voter has been verified in different department</string>
    <string name="payment_amount">Amount</string>
    <string name="id_number">Id No.</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="email">Email</string>
    <string name="telephone">Phone No.</string>
    <string name="verification_number">Verification No.</string>
    <string name="validation_verification_num">Verification must be a numeric</string>
    <string name="id_police">Police ID</string>
    <string name="id_passport">Passport</string>
    <string name="id_other">Other</string>
    <string name="default_api_url" translatable="false">http://10.132.0.14:80/dpelapi/</string>
    <string name="undo_vote_verification_dialog">Are you sure you want to undo voter\'s verification?</string>
    <string name="prefs_category_settings">Settings</string>
    <string name="pref_api_url_title">API URL</string>
    <string name="pref_api_url_summary">Rest api endpoint setting</string>
    <string name="electoral_number_short">Special Voter No.</string>
    <string name="copyright">Developed by OTS S.A © 2017</string>
    <string name="verify_payment_amount">The payment must be at least €</string>
    <string name="default_update_url" translatable="false">http://10.132.0.14:80/apk/</string>
    <string name="update_new_version_available">There is a new version available. Do you want to download it?</string>
    <string name="error_save_voter_duplicate_verification_number">This verification number is used already. Try again</string>
    <string name="error_save_voter_department_results_submitted">This department has submitted results. Verifications are disabled.</string>
    <string name="error_undo_vote_department_results_submitted">This department has submitted results. You cannot undo the vote.</string>
    <string name="error_save_voter_already_voted">The voter has already voted</string>
    <string name="button_attach_cashier_photo">Cashier photo attachment</string>
    <string name="error_results_inconsistent_votes">Total voters is not equal with total verifications</string>
    <string name="verify_upload_cashier_photo_sucess">Cashier\'s photo was upload successfully</string>
    <string name="pref_update_url_title">Update URL</string>
    <string name="pref_update_url_summary">Update URL setting</string>
    <string name="label_electoral_center">Electoral Center</string>
    <string name="has_voted_in_round_one">Round 1</string>
    <string name="dialog_verify_non_first_round_voter">This voter was not verified in the first round. Do you want to verify now?</string>
    <string name="error_save_voter_verify_any_elector_reject">Verification of voters that have not been verified in the first round is forbidden.</string>
    <string name="electoral_procedure_start">Start Process</string>
    <string name="electoral_procedure_end">End Process</string>
    <string name="dialog_start_procedure_title">Start Procedure</string>
    <string name="dialog_start_procedure_msg">Are you sure you want to start the election procedure for this department?</string>
    <string name="dialog_stop_procedure_title">Stop procedure</string>
    <string name="dialog_stop_procedure_msg">Are you sure you want to stop the election procedure?</string>
    <string name="snackbar_procedure_started">The election procedure has started</string>
    <string name="snackbar_procedure_ended">The election procedure has ended</string>
    <string name="error_results_department_has_not_ended">This department has not finished the election process</string>
    <string name="error_save_voter_department_has_not_started">Election procedure not started yet</string>
    <string name="error_save_voter_department_has_ended">The election process has ended</string>
    <string name="dialog_auto_start_title">Start Election Process</string>
    <string name="dialog_auto_start_process">Election process has not started yet. Do you want to start it now?</string>
    <string name="dialog_auto_stop_title">Stop Election Process</string>
    <string name="dialog_auto_stop_process">The election process is still running. You need to stop the process in order to send results. Do yoy want to stop it now?</string>
    <string name="upload_results_verification_dialog_title">Submit Results</string>
    <string name="dialog_verify_non_first_round_voter_title">This voter was not verified in the first round.</string>
</resources>