<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_signout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/logout"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"
        app:showAsAction="never"
        android:enabled="true"/>

    <item
        android:id="@+id/action_start_procedure"
        android:title="@string/electoral_procedure_start"
        app:showAsAction="never"
        android:enabled="true"/>

    <item
        android:id="@+id/action_stop_procedure"
        android:title="@string/electoral_procedure_end"
        app:showAsAction="never"
        android:enabled="true"/>

    <item
        android:id="@+id/action_info"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/info"
        app:showAsAction="never"
        android:enabled="true"/>

</menu>