<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frameLayout"
    tools:context="com.ots.dpel.android.VerifyVoterFragment">


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="50dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/rootScrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName|textNoSuggestions|textCapCharacters"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName|textNoSuggestions|textCapCharacters"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutFatherName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextFatherName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/father_s_name"
                    android:inputType="textPersonName|textNoSuggestions|textCapCharacters" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutMotherName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextMotherName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mother_s_name"
                    android:inputType="textPersonName|textNoSuggestions|textCapCharacters" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutYearOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextYearOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/year_of_birth"
                    android:inputType="numberDecimal"
                    android:digits="0123456789"
                    android:maxLength="4" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutElectoralNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextElectoralNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/electoral_number"
                    android:inputType="numberDecimal"
                    android:digits="0123456789"
                    android:maxLength="13"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutVerificationNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextVerificationNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/verification_number"
                    android:inputType="numberDecimal"
                    android:digits="0123456789"
                    android:maxLength="10"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/searchButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/search" />

                <Button
                    android:id="@+id/clearFormButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/clear_form" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</FrameLayout>
