<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/userFullNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_logged_user_FullName" />

            <TextView
                android:id="@+id/userFullNameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:textStyle="bold" />

        </LinearLayout>

        <!--Electoral Center-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/electoralCenterNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_electoral_center" />

            <TextView
                android:id="@+id/electoralCenterNameValue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxLines="100"
                android:paddingStart="4dp"
                android:textStyle="bold" />

        </LinearLayout>

        <!--Electoral Department-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/electoralDepartmentNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_electoral_department" />

            <TextView
                android:id="@+id/electoralDepartmentNameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/electoralRoundNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_electoral_round" />

            <TextView
                android:id="@+id/electoralRoundNameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/versionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version" />

            <TextView
                android:id="@+id/versionValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewCreatedBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|end"
                android:layout_weight="1"
                android:paddingTop="32dp"
                android:text="@string/copyright"
                android:textAlignment="viewStart"
                android:textStyle="bold|italic" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:scaleType="fitEnd"
            app:srcCompat="@mipmap/ic_launcher" />

    </LinearLayout>


</LinearLayout>